--- a/service_empresas/requirements.txt
+++ b/service_empresas/requirements.txt
@@ -1,15 +1,18 @@
 asgiref==3.10.0
 certifi==2025.10.5
 charset-normalizer==3.4.4
+dj-database-url==3.0.1
 Django==5.2.8
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+dotenv==0.9.9
 gunicorn==23.0.0
 idna==3.11
 packaging==25.0
 psycopg2-binary==2.9.11
 pybreaker==1.4.1
 PyJWT==2.10.1
+python-dotenv==1.2.1
 requests==2.32.5
 sqlparse==0.5.3
 tenacity==9.1.2
