--- a/service_proyectos/requirements.txt
+++ b/service_proyectos/requirements.txt
@@ -8,6 +8,7 @@ djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.29.0
 drf-spectacular-sidecar==2025.10.1
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -15,6 +16,8 @@ idna==3.11
 inflection==0.5.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+packaging==25.0
+psycopg2-binary==2.9.11
 pybreaker==1.4.1
 PyJWT==2.10.1
 python-dotenv==1.2.1
