--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 events { worker_connections 1024; }
 
 http {
-    upstream auth_up { server auth-service:8000; }
+    upstream auth_up { server service_auth:8000; }
     upstream empresas_up { server service_empresas:8000; }
     upstream proyectos_up { server service_proyectos:8000; }
     upstream programacion_up { server service_programacion:8000; }
