--- a/service_auth/requirements.txt
+++ b/service_auth/requirements.txt
@@ -4,6 +4,7 @@ attrs==25.4.0
 certifi==2025.10.5
 dj-database-url==3.0.1
 Django==5.2.8
+django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.29.0
