--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,61 @@
-events { worker_connections 1024; }
+events { 
+    worker_connections 1024; 
+}
 
 http {
-    upstream auth_up { server service_auth:8000; }
-    upstream empresas_up { server service_empresas:8000; }
-    upstream proyectos_up { server service_proyectos:8000; }
-    upstream programacion_up { server service_programacion:8000; }
+    upstream auth_up {
+        server service_auth:8000;
+    }
+
+    upstream empresas_up {
+        server service_empresas:8000;
+    }
+
+    upstream proyectos_up {
+        server service_proyectos:8000;
+    }
+
+    upstream programacion_up {
+        server service_programacion:8000;
+    }
 
     server {
         listen 80;
 
-        location /auth/ { proxy_pass http://auth_up/; }
-        location /empresas/ { proxy_pass http://empresas_up/; }
-        location /proyectos/ { proxy_pass http://proyectos_up/; }
-        location /programacion/ { proxy_pass http://programacion_up/; }
+        # ------------------ AUTH SERVICE ------------------
+        location /auth/ {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://auth_up/auth/;
+        }
+
+        # ------------------ EMPRESAS SERVICE ------------------
+        location /empresas/ {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://empresas_up/empresas/;
+        }
+
+        # ------------------ PROYECTOS SERVICE ------------------
+        location /proyectos/ {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://proyectos_up/proyectos/;
+        }
+
+        # ------------------ PROGRAMACION SERVICE ------------------
+        location /programacion/ {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://programacion_up/programacion/;
+        }
     }
 }
