--- a/service_empresas/Dockerfile
+++ b/service_empresas/Dockerfile
@@ -1,15 +1,36 @@
 FROM python:3.11-slim
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    POETRY_VIRTUALENVS_CREATE=false
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --upgrade pip && pip install -r requirements.txt
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends build-essential gcc libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-COPY . .
+COPY requirements.txt /app/
+
+RUN pip install --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt
+
+RUN useradd --create-home appuser
+WORKDIR /app
+COPY . /app
+RUN chown -R appuser /app
+
+COPY ./entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+
+USER appuser
 
 EXPOSE 8000
+
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+  CMD curl -f http://localhost:8000/health/liveness/ || exit 1
+
+ENTRYPOINT ["/app/entrypoint.sh"]
 
 CMD ["gunicorn", "service_empresas.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "2"]
