--- a/service_programacion/requirements.txt
+++ b/service_programacion/requirements.txt
@@ -2,6 +2,7 @@ anyio==4.11.0
 asgiref==3.10.0
 attrs==25.4.0
 certifi==2025.10.5
+confluent-kafka==2.12.2
 dj-database-url==3.0.1
 Django==5.2.8
 django-cors-headers==4.9.0
