--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,21 @@
 version: "3.8"
 
+x-environment: &default-env
+  KAFKA_BROKER: kafka:9092
+
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
     networks:
       - internal_net
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:7.5.0
     depends_on:
       - zookeeper
     ports:
@@ -20,6 +26,12 @@ services:
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    healthcheck:
+      test: [ "CMD-SHELL", "nc -z localhost 9092" ]
+      interval: 10s           # cada 10 segundos
+      timeout: 5s             # si no responde en 5 segundos, se considera fallido
+      retries: 5              # intenta 5 veces antes de marcarlo como unhealthy
+      start_period: 15s       # espera 15 seg antes de comenzar las verificaciones
     networks:
       - internal_net
 
@@ -74,9 +86,12 @@ services:
     build: ./service_empresas
     environment:
       - DATABASE_URL=postgres://empresa_user:empresa_pass@postgres_empresa:5432/empresa_db
+      - KAFKA_BROKER=kafka:9092
     depends_on:
       - postgres_empresa
       - service_auth
+      - kafka
+
     networks:
       - front_net
       - internal_net
@@ -89,6 +104,8 @@ services:
       POSTGRES_PASSWORD: proyectos_pass
     volumes:
       - pg_proyectos_data:/var/lib/postgresql/data
+    depends_on:
+      - kafka
     networks:
       - internal_net
 
