--- a/service_proyectos/.env
+++ b/service_proyectos/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgres://buser:bpass@postgres_b:5432/bdb
 SERVICE_A_URL=http://service_empresas:8000
 SERVICE_C_URL=http://service_programacion:8000
+KAFKA_BROKER=kafka:9092
